# tickthon

./: .coveragerc  .flake8  .gitignore  README.md  pyproject.toml  ticktick_api_token.json
.github/scripts/: increment_version.py
.github/workflows/: cd.yml
src/pytic/: __init__.py  _task_utils.py  _ticktick_api.py  ticktick_client.py
src/pytic/data/: ticktick_id_keys.py  ticktick_list_parameters.py  ticktick_payloads.py  ticktick_task_parameters.py
src/tickthon/: __init__.py  _config.py  _task_utils.py  _ticktick_api.py  expense_log_model.py  task_model.py  ticktick_client.py
src/tickthon/data/: day_log_words.py  past_tense_verbs.py  task_types.py  ticktick_id_keys.py  ticktick_ids.py  ticktick_list_parameters.py  ticktick_payloads.py  ticktick_task_parameters.py
tests/: conftest.py  test_expense_log_model.py  test_task_model.py  test_ticktick_api.py  test_ticktick_client.py
tests/data/: dict_task.json  project_profiles.json  test_ticktick_ids.json
