[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
repository = "https://github.com/anggelomos/tickthon"

[tool.setuptools.package-data]
tickthon = ["py.typed"]

[project]
name = "tickthon"
version = "0.3.0"
description = "Yet another unofficial Ticktick API client, it is based on ticktick-py"
readme = "README.md"
authors = [{name = "anggelomos", email = "anggelomos@outlook.com"}]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "requests",
    "attrs",
    "python-dateutil"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
twine = "^6.1.0"
flake8 = "^7.3.0"
mypy = "^1.16.1"
ruff = "^0.12.3"
types-requests = "^2.32.4.20250611"
types-python-dateutil = "^2.9.0.20250708"
